<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.adamo.cooksterapp.OrderCookAddActivity">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/provider" />

                    <Spinner
                        android:id="@+id/spinner_employees"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:dropDownWidth="fill_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="2"
                        android:gravity="start"
                        android:text="@string/products" />

                    <LinearLayout
                        android:id="@+id/order_products_selected"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/products"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_products"
                            android:singleLine="true" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/priority" />

                    <Spinner
                        android:id="@+id/spinner_priority"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/comment" />

                    <EditText
                        android:id="@+id/comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/comment_hint"
                        android:singleLine="false" />
                </LinearLayout>

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_order">

                </Button>
            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        android:background="@drawable/side_nav_bar_bottom"
        app:itemIconTint="@color/colorMenuIcon"
        app:itemTextAppearance="@style/NavigationViewStyle"
        app:itemTextColor="@color/colorMenuText"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
