<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.adamo.cooksterapp.OrderWaiterAddActivity">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/cook" />

                    <Spinner
                        android:id="@+id/spinner_employees"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:dropDownWidth="fill_parent" />
                </LinearLayout>

                <LinearLayout
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/reservation" />

                    <CheckBox
                        android:id="@+id/reservation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/supply" />

                    <CheckBox
                        android:id="@+id/supply"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Czy z dostawą" />
                </LinearLayout>

                <LinearLayout
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/takeaway" />

                    <CheckBox
                        android:id="@+id/takeaway"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Czy na wynos" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/reservation_linear"
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reservation_date" />


                    <EditText
                        android:id="@+id/order_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/takeaway_linear"
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/supplier" />

                    <Spinner
                        android:id="@+id/spinner_employees_takeaway"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:dropDownWidth="fill_parent"
                        android:fontFamily="@font/roboto_light"
                        android:textSize="16dp" />
                </LinearLayout>
                <LinearLayout
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/currency" />

                    <Spinner
                        android:id="@+id/spinner_currencies"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:dropDownWidth="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/language" />

                    <Spinner
                        android:id="@+id/spinner_lang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:dropDownWidth="fill_parent" />
                </LinearLayout>

                <LinearLayout
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/table_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/table" />

                    <EditText
                        android:id="@+id/table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Wpisz numer stolika" />
                </LinearLayout>

                <LinearLayout
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical|start"
                        android:text="@string/dishes" />

                    <LinearLayout
                        android:id="@+id/order_products_selected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <Button
                            android:id="@+id/dishes"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="15dp"
                            android:layout_weight="2"
                            android:hint="Wybierz dania" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    style="@style/Settings_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/comment" />

                    <EditText
                        android:id="@+id/comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="200"
                        android:layout_weight="1"
                        android:hint="Wpisz komentarz do zamówienia" />
                </LinearLayout>


                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send_order">

                </Button>
            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        android:background="@drawable/side_nav_bar_bottom"
        app:itemIconTint="@color/colorMenuIcon"
        app:itemTextAppearance="@style/NavigationViewStyle"
        app:itemTextColor="@color/colorMenuText"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
