<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        tools:context="com.example.adamo.cooksterapp.ReservationsActivity">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginVertical="30dp"
            android:src="@drawable/ic_warning" />

        <TextView
            android:id="@+id/error_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_title"
            android:textAlignment="center"
            android:textColor="#868686"
            android:textSize="25dp" />


        <TextView
            android:id="@+id/error_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/error_description"
            android:textAlignment="center"
            android:textColor="#868686"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/open_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="150dp"
                android:layout_marginVertical="0dp"
                android:src="@drawable/ic_refresh_black" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/try_again"
                android:textAlignment="center"
                android:textColor="#868686"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/side_nav_bar_bottom"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:itemIconTint="@color/colorMenuIcon"
        app:itemTextAppearance="@style/NavigationViewStyle"
        app:itemTextColor="@color/colorMenuText"
        app:menu="@menu/activity_main_drawer" />


</android.support.v4.widget.DrawerLayout>
